@@ -1,4 +1,5 @@
 2006-04-25  Don Allingham  <don@gramps-project.org>
+	* src/GrampsCfg/py: move and rename tabs
 	* src/ViewManager.py: new config changes, handle exception
 	* src/GrampsCfg.py: new config changes
 	* src/Config/gen_schema_keys.py: new config changes
